stages/stage2/k8s/ui/frontend/frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apollo-airlines-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: apollo11-ui
      containers:
        - name: frontend
          image: apollo11/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
