stages/stage2/k8s/ui/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apollo11-ui
spec:
  selector:
    app: frontend
  ports:
    # nginx (sidecar) is the public-facing container on port 80
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
