stages/stage2/k8s/ui/frontend/frontend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-external
  namespace: apollo-airlines-ui
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 3000
  policyTypes:
    - Ingress
